--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,12 @@
           <version>${camel-version}</version>
       </dependency>
 
+    <dependency>
+      <groupId>org.apache.camel</groupId>
+      <artifactId>camel-stream</artifactId>
+      <version>${camel-version}</version>
+    </dependency>
+
       <!-- logging -->
     <dependency>
       <groupId>org.slf4j</groupId>
